--- a/app/src/main/res/layout/popup_dailytasklist.xml
+++ b/app/src/main/res/layout/popup_dailytasklist.xml
@@ -20,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/Daily_Tasks"
-            android:textSize="20sp"
+            android:textSize="24sp"
             android:fontFamily="@font/lato_regular"
             android:textColor="@color/text_light"
             android:layout_marginTop="12dp"
@@ -67,7 +67,9 @@
             android:layout_marginTop="12dp"
             app:layout_constraintTop_toBottomOf="@id/tvTodayDate"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            android:scrollbars="vertical"
+            android:fadeScrollbars="false"/>
 
         <!-- Divider -->
         <View
@@ -86,7 +88,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/Add_more_tasks"
-            android:textSize="14sp"
+            android:textSize="16sp"
             android:textColor="@color/text_light"
             android:fontFamily="@font/lato_regular"
             android:layout_marginTop="12dp"
@@ -100,7 +102,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/Cancel"
-            android:textSize="16sp"
+            android:textSize="20sp"
             android:fontFamily="@font/lato_regular"
             android:textColor="@color/text_hint"
             android:layout_marginTop="12dp"
@@ -116,7 +118,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/Done"
-            android:textSize="16sp"
+            android:textSize="20sp"
             android:fontFamily="@font/lato_regular"
             android:textColor="@color/text_light"
             android:layout_marginTop="12dp"
