Added progress indicator

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,7 +60,7 @@
                     android:layout_height="wrap_content"
                     app:indicatorColor="@color/primary"
                     app:indicatorSize="48dp"
-                    app:trackColor="@color/background_light"
+                    app:trackColor="@color/surface_dark"
                     app:trackThickness="2dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -137,7 +137,7 @@
                     android:layout_height="wrap_content"
                     app:indicatorColor="@color/primary"
                     app:indicatorSize="48dp"
-                    app:trackColor="@color/background_light"
+                    app:trackColor="@color/surface_dark"
                     app:trackThickness="2dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -215,7 +215,7 @@
                     android:layout_height="wrap_content"
                     app:indicatorColor="@color/primary"
                     app:indicatorSize="48dp"
-                    app:trackColor="@color/background_light"
+                    app:trackColor="@color/surface_dark"
                     app:trackThickness="2dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
