--- a/app/src/main/res/layout/activity_monthly_overview.xml
+++ b/app/src/main/res/layout/activity_monthly_overview.xml
@@ -7,6 +7,24 @@
     android:layout_height="match_parent"
     tools:context=".MonthlyOverview">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbarOverview"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+        <TextView
+            android:id="@+id/txtOverViewTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/Monthly_Overview"
+            android:textSize="20sp"
+            android:textColor="@color/text_light"
+            android:fontFamily="@font/lato_bold"
+            android:layout_gravity="center"/>
+    </androidx.appcompat.widget.Toolbar>
+
     <androidx.cardview.widget.CardView
         android:id="@+id/cardOverview"
         android:layout_width="288dp"
@@ -14,7 +32,7 @@
         android:layout_marginTop="20dp"
         app:cardCornerRadius="8dp"
         android:background="@color/white"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbarOverview"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
@@ -88,8 +106,18 @@
                 app:layout_constraintBottom_toBottomOf="parent"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-
     </androidx.cardview.widget.CardView>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvOverviewTaskProgress"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        tools:listitem="@layout/item_taskprogress"
+        android:layout_marginTop="20dp"
+        android:paddingTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/cardOverview"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
