--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,6 +62,7 @@
                     app:indicatorSize="48dp"
                     app:trackColor="@color/surface_dark"
                     app:trackThickness="2dp"
+                    app:indicatorDirectionCircular="counterclockwise"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -139,6 +140,7 @@
                     app:indicatorSize="48dp"
                     app:trackColor="@color/surface_dark"
                     app:trackThickness="2dp"
+                    app:indicatorDirectionCircular="counterclockwise"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -217,6 +219,7 @@
                     app:indicatorSize="48dp"
                     app:trackColor="@color/surface_dark"
                     app:trackThickness="2dp"
+                    app:indicatorDirectionCircular="counterclockwise"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
