--- a/app/src/main/res/layout/item_upcomingsevents.xml
+++ b/app/src/main/res/layout/item_upcomingsevents.xml
@@ -39,7 +39,7 @@
                     android:id="@+id/tvEventDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/eg_eventdate"
+                    android:text="@string/eg_eventDate"
                     android:textSize="12sp"
                     android:textColor="@color/text_light"
                     android:fontFamily="@font/lato_regular"
