--- a/app/src/main/res/layout/popup_add_newgoal.xml
+++ b/app/src/main/res/layout/popup_add_newgoal.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:backgroundTint="@color/background_light"
+    android:layout_height="wrap_content"
+    android:backgroundTint="@color/surface_light"
     android:layout_gravity="center"
     android:elevation="8dp"
     app:cardCornerRadius="20dp"
@@ -155,6 +155,34 @@
                 app:chipStrokeColor="@color/background_dark"
                 app:chipStrokeWidth="1dp"/>
         </com.google.android.material.chip.ChipGroup>
+
+        <TextView
+            android:id="@+id/txtBtnCancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/Cancel"
+            android:textSize="20sp"
+            android:textColor="@color/text_hint"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="20dp"
+            app:layout_constraintEnd_toStartOf="@+id/txtBtnDone"
+            app:layout_constraintTop_toBottomOf="@id/priorityChipGroup"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+        <TextView
+            android:id="@+id/txtBtnDone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/Done"
+            android:textColor="@color/text_light"
+            android:textSize="20sp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="20dp"
+            app:layout_constraintTop_toBottomOf="@id/priorityChipGroup"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
