--- a/app/src/main/res/layout/popup_task_preview.xml
+++ b/app/src/main/res/layout/popup_task_preview.xml
@@ -68,6 +68,7 @@
                 android:background="@drawable/minus_btn4x"/>
 
             <EditText
+                android:id="@+id/edtValue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:minHeight="52dp"
