--- a/app/src/main/res/layout/popup_add_newgoal.xml
+++ b/app/src/main/res/layout/popup_add_newgoal.xml
@@ -104,20 +104,19 @@
             android:textColor="@color/text_light"
             android:textSize="14sp"
             android:fontFamily="@font/lato_regular"
-            android:layout_marginTop="4dp"
-            android:layout_marginStart="32dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@id/edtGoalTarget"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/priorityChipGroup"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:singleSelection="true"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            android:layout_marginTop="4dp"
             app:layout_constraintTop_toBottomOf="@id/txtPriority"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
@@ -129,6 +128,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/low"
                 android:clickable="true"
+                android:textColor="@color/text_light"
                 app:chipBackgroundColor="@color/surface_light"
                 app:chipStrokeColor="@color/background_dark"
                 app:chipStrokeWidth="1dp"/>
@@ -140,6 +140,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/med"
                 android:clickable="true"
+                android:textColor="@color/text_light"
                 app:chipBackgroundColor="@color/surface_light"
                 app:chipStrokeColor="@color/background_dark"
                 app:chipStrokeWidth="1dp"/>
@@ -151,6 +152,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/high"
                 android:clickable="true"
+                android:textColor="@color/text_light"
                 app:chipBackgroundColor="@color/surface_light"
                 app:chipStrokeColor="@color/background_dark"
                 app:chipStrokeWidth="1dp"/>
