few changes in the ui at item_upcomingsevents.xml

--- a/app/src/main/res/layout/item_upcomingsevents.xml
+++ b/app/src/main/res/layout/item_upcomingsevents.xml
@@ -39,12 +39,13 @@
 
                 <TextView
                     android:id="@+id/tvEventDate"
-                    android:layout_width="20dp"
-                    android:layout_height="11dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:fontFamily="@font/lato_regular"
                     android:text="@string/eg_eventDate"
                     android:textColor="@color/text_light"
                     android:textSize="12sp"
+                    android:gravity="center"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
