--- a/app/src/main/res/layout/popup_add_new_task.xml
+++ b/app/src/main/res/layout/popup_add_new_task.xml
@@ -41,7 +41,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:visibility="gone"
-                android:scaleType="center"/>
+                android:scaleType="fitCenter"/>
 
             <ImageView
                 android:id="@+id/btnAddImage"
